err/torf.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bencoder.pyx-1.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/torf'...
Compiling './lib/python3.5/site-packages/torf/_errors.py'...
***   File "./lib/python3.5/site-packages/torf/_errors.py", line 31
    super().__init__(f'URL is not valid: {url!r}')
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torf/_torrent.py'...
***   File "./lib/python3.5/site-packages/torf/_torrent.py", line 248
    raise RuntimeError(f'piece_size must be int, not {value!r}')
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/torf/_utils.py'...
***   File "./lib/python3.5/site-packages/torf/_utils.py", line 147
    keychain_str = ''.join(f'[{key!r}]' for key in keychain)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torf-1.0rc4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
